Projet GL/Projet_GL/src/test/deca/context/invalid/increment3/string-condition.deca
//Rule : 3.29

// Raison : Ligne 9 condition must be a boolean

// Historique : cree le 12/01/2023

{
    //Must be refused
    if("Ca marche"){
        print("Danger");
    }
}